# CrawlerShopWeb

./: .gitignore  README.md  main.py  pyproject.toml  shoplist.xlsx
