[tool.poetry]
name = "爬蟲"
version = "0.1.0"
description = ""
authors = ["RayLonscholar <f82621672@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
selenium = "^4.26.1"
requests = "^2.32.3"
html5lib = "^1.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
